configured FeignClient for inter service communication