@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -44,7 +43,7 @@ public class ProductService {
 
         List<ProductResponseDTO> productResponseDTOS = products.stream()
                 .map(ProductMapper.MAPPER::mapToProductResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
         responseDTO.setData(productResponseDTOS);
         log.info("<--getAllProducts");
         return responseDTO;
